--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
   <header>
-    <a href="Google.com">
-      <img src="menu.png"></a>
+      <img src="menu.png">
     <h1>TECH&GAMING&NEWS</h1>
     </header>
 
