--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   </head>
   <body>
   <header>
-      <img src="menu.png">
-    <h1>TECH&GAMING&NEWS</h1>
+    <a class="logo" href=""> brooo</a>
+      <ul>
+      <li><a href=""></a>HOME</li>
+      <li><a href=""></a>TECH</li>
+      <li><a href=""></a>GAMING</li>
+      <li><a href=""></a>NEWS</li>
+      <li><a href=""></a>CONTENT US</li>
+    </ul>
     </header>
 
   
