--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
   <head>
     <title>TECH&GAMING&NEWS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+
+
+
+
   </head>
   <body>
   <header>
-    
+    <div class="logo"><a href="">GamerPro</a></div>
       <ul>
       <li><a href=""></a>HOME</li>
+      | 
       <li><a href=""></a>TECH</li>
+      | 
       <li><a href=""></a>GAMING</li>
+      | 
       <li><a href=""></a>NEWS</li>
-      <li><a href=""></a>CONTENT US</li>
+      | 
+      <li class="right"><a href=""></a>CONTENT US</li>
     </ul>
     </header>
 
