--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <img src="download.jpg">
         <img src="download (1).jpg">
         <img src="download (2).jpg">
+        <img src="download.jpg">
         </figure>
         
         
