--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
       <li><a href="">CONTENT US</a></li>
     </ul>
     </header>
+
       <section>
         <figure>
-        <img src="download.jpg">
-        <img src="download (1).jpg">
-        <img src="download (2).jpg">
-        <img src="download.jpg">
+        <img src="gaming.jpg">
+        <img src="gaming1.jpg">
+        <img src="gaming2.jpg">
+        <img src="gaming.jpg">
         </figure>
         
         
