--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="logo"><a class= "logoa" href="index.html">GamerPro</a></div>
       <ul>
-      <li><a href="">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       | 
       <li><a href="">TECH</a></li>
       | 
@@ -23,7 +23,7 @@
       | 
       <li><a href="">NEWS</a></li>
       | 
-      <li><a href="">CONTENT US</a></li>
+      <li><a href="">CONTECT US</a></li>
     </ul>
     </header>
 
