--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
       <section>
         <figure>
+         <div>this is img1</div>
         <img src="gaming.jpg">
         <img src="gaming1.jpg">
         <img src="gaming2.jpg">
