--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     </ul>
     </header>
 
-      <section>
+      <section class="slider">
         <figure>
-         <div>this is img1</div>
         <img src="gaming.jpg">
         <img src="gaming1.jpg">
         <img src="gaming2.jpg">
@@ -38,8 +37,6 @@
         
         
       </section>
-
-  
   
   </body>
 </html>
