--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         </section>
 
 
-
         <section class="all">
+          <h1>NEWS</h1>
+          <hr>
         <div class="news1">
       <a href=""><img src="Insert.png"></a>
          <h1>title</h1>
