--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <h1>NEWS</h1>
           <hr>
         <div class="news1">
-      <a href=""><img src="Insert.png"></a>
-         <h1>title</h1>
+          <a href=""><img src="fortnitenews.jpg"></a>
+         <h1>all about the fortnite update!</h1>
          </div>
       <div class="news1">
       <a href=""><img src="Insert.png"></a>
