--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <hr>
         <div class="news1">
           <a href=""><img src="fortnitenews.jpg"></a>
-         <h1>all about the fortnite update!</h1>
+       <h1> all about the fortnite update</h1>
          </div>
       <div class="news1">
       <a href=""><img src="Insert.png"></a>
