--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <img src="gaming.jpg">
         </figure>
         </section>
+        <h1 class="t1">All you need to know about the Fortnite update</h1>
+        <hr>
 
 
         <section class="all">
