--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
                   <img src="fortnitenews.jpg">
                   <figcaption>all about the Fortnite update</figcaption>
                 </figure>
+                <figure>
+                  <img src="fortnitenews.jpg">
+                  <figcaption>all about the Fortnite update</figcaption>
+                </figure>
+                <figure>
+                  <img src="fortnitenews.jpg">
+                  <figcaption>all about the Fortnite update</figcaption>
+                </figure>
+                <figure>
+                  <img src="fortnitenews.jpg">
+                  <figcaption>all about the Fortnite update</figcaption>
+                </figure>
+                <figure>
+                  <img src="fortnitenews.jpg">
+                  <figcaption>all about the Fortnite update</figcaption>
+                </figure>
     </section>
  
 
