--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <figure>  
           <img src="fortnitenews.jpg">
           <figcaption>all about the Fortnite update</figcaption>
-           <div>you will not unddndhdhdb djfjndd dhdbbd d bd dbddbdb dhjdbdd d hdbd </div>
+           <div><b>you will not unddndhdhdb djfjndd dhdbbd d bd dbddbdb dhjdbdd d hdbd</b> </div>
          
         </figure>
         <hr>
