--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            <div>you will not unddndhdhdb djfjndd dhdbbd d bd dbddbdb dhjdbdd d hdb</div>
          
         </figure>
-        <hr>
+        <hr class="hr1">
         
                 <figure>  
           <img src="fortnitenews.jpg">
@@ -56,7 +56,7 @@
                   <img src="fortnitenews.jpg">
                   <figcaption>all about the Fortnite update</figcaption>
                 </figure>
-                <hr>
+                <hr class="hr1">
                 <figure>
                   <img src="fortnitenews.jpg">
                   <figcaption>all about the Fortnite update</figcaption>
@@ -66,7 +66,7 @@
                   <img src="fortnitenews.jpg">
                   <figcaption>all about the Fortnite update</figcaption>
                 </figure>
-                <hr>
+                <hr class="hr1">
                 <figure>
                   <img src="fortnitenews.jpg">
                   <figcaption>all about the Fortnite update</figcaption>
